--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -30,6 +30,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libopenslide-dev \
     build-essential \
     ca-certificates \
+    libgl1 \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
